syntax = "proto3";

option go_package = "./pb";
import "ws.proto";
package pb;

message PushMsgReq {
  server_api_params.MsgData msgData = 2;
  string pushToUserID = 3;
}
message PushMsgResp{
  int32   ResultCode = 1;
}
service msgPushService {
  rpc PushMsg(PushMsgReq) returns (PushMsgResp);
}